--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>VNS Prober</string>
+   <string>TSPPDL Unicen</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="pushButton">
@@ -562,7 +562,6 @@
     <string>Save Tour</string>
    </property>
   </action>
-
   <action name="actionAcerca_de">
    <property name="text">
     <string>About...</string>
